Parse typed debug values